[package]
name = "apisvr"
version = "0.1.0"
authors = ["heng30 <2238288979@qq.com>"]
edition = "2021"

[dependencies]
log = "0.4"
anyhow = "1.0"
chrono = "0.4"
rocket = "0.5"
serde_json = "1.0"
env_logger = "0.10"
lazy_static = "1.4"
platform-dirs = "0.3"

uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["serde_derive"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
